# participation-analysis

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: check-links.yaml  test.yaml
notebooks/: allrepos.txt  combine.ipynb  general_plots.ipynb  plausible.ipynb  survey_reminders.ipynb  time_series_commits.ipynb  time_series_educators.ipynb  time_series_events.ipynb  zoom_connections_analysis.ipynb
src/hsfparana/: colors.py  mpl_utils.py
src/hsfparana/util/: log.py  test_log.py
