[metadata]
name = hsfparana
version = file: src/hsfparana/version.txt
description = Analyze surveys and participation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hsf-training/participation-analysis
author = Kilian Lieret
author_email = kilian.lieret@posteo.de
maintainer = Kilian Lieret
maintainer_email = kilian.lieret@posteo.de
license = MIT
license_files = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker =   https://github.com/hsf-training/participation-analysis/issues
    Documentation = https://hsfparana.readthedocs.io/
    Source Code =   https://github.com/hsf-training/participation-analysis
python_requires = >=3.7

[options]
packages = find:
install_requires =
    colorlog
    gitpython
    pandas
    pyyaml
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-coverage
